Added bidirectional POJO <> XML mapping for Thing